Change log for WGDev

0.4.0
 - Full POD coverage of API added
 - Reset command learned --emptytrash option to delete all content from trash

0.3.0 - Mar 26 2009
 - WGDev instances can be created without a WebGUI root/config
 - WGDev can now write to its config file
 - More flexible command line parsing API
 - Include paths from preload.custom when loading Perl modules
 - WGDev config file changed to JSON format, with a slightly modified structure.
 - Config command added to retrieve and set WGDev config options
 - Export command added to export assets to serialized files
 - Guid command added to generate GUIDs
 - Help command added to display help through Pod::Perldoc
 - Import command added to import assets from files generated by Export command
 - Ls command added to list assets
 - Optimize command added to scans your site and suggest simple optimizations
 - Util command added running utility scripts
 - Edit command learned to edit entire entire branches of assets, with class restrictions
 - Edit command learned to create new assets by specifying class name
 - Reset command learned --config option to reset WebGUI config file
 - Reset command learned --delusers option to delete all non-system users
 - Reset command learned --profile option to load sets of options from config file
 - Reset command learned --util option to run utility scripts using Util command
 - Reset command now preserves permissions as much as possible on uploads
 - Reset command now only performs upgrades on the site it is resetting instead of all sites
 - Test command learned --reset parameter to run a reset before performing tests
 - Various small bug fixes
 - Improved documentation, including an example command
 - Improve testing

0.2.0 - Feb 09 2009
 - Command API changed
 - Documentation now in POD form
 - Passes Perl::Critic tests

0.1.0
 - Initial version - unreleased
