@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.008008;
 
-our $VERSION = '0.1.0';
+our $VERSION = '0.2.0';
 
 use WGDev::Command::Base::Verbosity;
 BEGIN { our @ISA = qw(WGDev::Command::Base::Verbosity) }
@@ -11,9 +11,9 @@ BEGIN { our @ISA = qw(WGDev::Command::Base::Verbosity) }
 use File::Spec ();
 use Carp qw(croak);
 
-sub option_config {
+sub config_options {
     return (
-        shift->SUPER::option_config, qw(
+        shift->SUPER::config_options, qw(
             sql|s
             uploads|u
             ) );
