@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.008008;
 
-our $VERSION = '0.0.1';
+our $VERSION = '0.1.0';
 
 use WGDev::Command::Base;
 BEGIN { our @ISA = qw(WGDev::Command::Base) }
@@ -11,13 +11,13 @@ BEGIN { our @ISA = qw(WGDev::Command::Base) }
 use WGDev          ();
 use WGDev::Command ();
 
-sub option_config {
+sub config_options {
     return qw(
         struct|s
     );
 }
 
-sub option_parse_config { return qw(gnu_getopt pass_through) }
+sub config_parse_options { return qw(gnu_getopt pass_through) }
 
 sub process {
     my $self = shift;
