@@ -3,13 +3,13 @@ use strict;
 use warnings;
 use 5.008008;
 
-our $VERSION = '0.1.0';
+our $VERSION = '0.2.0';
 
 use WGDev::Command::Base;
 BEGIN { our @ISA = qw(WGDev::Command::Base) }
 use Carp qw(croak);
 
-sub option_config {
+sub config_options {
     return qw(
         stdout
     );
