@@ -7,6 +7,7 @@ our $VERSION = '0.1.0';
 
 use WGDev::Command::Base ();
 BEGIN { our @ISA = qw(WGDev::Command::Base) }
+
 use WGDev::Command ();
 
 sub process {
