@@ -3,6 +3,9 @@ Change log for WGDev
 0.4.0
  - Full POD coverage of API added
  - Reset command learned --emptytrash option to delete all content from trash
+ - Fixed processing of config option on Reset or any other command
+ - Breaking change: WGDev::Command::Base's option_parse_config method is now config_parse_options
+ - Breaking change: WGDev::Command::Base's option_config method is now config_options
 
 0.3.0 - Mar 26 2009
  - WGDev instances can be created without a WebGUI root/config
